Ported KisSelectionManager to the strokes

At the same time, all its methods are now moved into separate
factory classes, so it will be much easier to add recording to
it later.

BUG:309628