krita/ui/kis_ui_action_factory_registry.h
@@ -1,0 +1,35 @@
+/*
+ *  Copyright (c) 2012 Dmitry Kazakov <dimula73@gmail.com>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ */
+
+#ifndef __KIS_UI_ACTION_FACTORY_REGISTRY_H
+#define __KIS_UI_ACTION_FACTORY_REGISTRY_H
+
+#include <krita_export.h>
+#include <KoGenericRegistry.h>
+#include "kis_ui_action_factory.h"
+
+
+class KRITAUI_EXPORT KisUiActionFactoryRegistry : public KoGenericRegistry<KisUiActionFactory*>
+{
+public:
+    KisUiActionFactoryRegistry();
+    ~KisUiActionFactoryRegistry();
+    static KisUiActionFactoryRegistry* instance();
+};
+
+#endif /* __KIS_UI_ACTION_FACTORY_REGISTRY_H */
